--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
+    "build": "tsc",
     "start": "node -r esm local.js",
     "test": "jest",
     "deploy": "serverless deploy"
@@ -11,19 +12,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@typegoose/typegoose": "^7.6.0",
+    "@types/crypto-js": "^4.0.1",
+    "@types/express": "^4.17.11",
+    "@types/mongoose": "5.10.x",
+    "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "aws-serverless-express": "^3.4.0",
     "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "fs": "0.0.1-security",
-    "mongoose": "^5.10.6",
-    "react": "^16.13.1"
+    "mongoose": "5.10.18",
+    "semver": "^7.3.4",
+    "typegoose": "^5.9.1",
+    "typescript": "^4.1.3",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.8",
-    "@types/node": "^14.11.2",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.2",
-    "serverless": "^2.15.0"
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
+    "serverless": "^2.29.0"
   }
 }
