--- a/package.json
+++ b/package.json
@@ -13,14 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@typegoose/typegoose": "^7.6.0",
-    "@types/crypto-js": "^4.0.1",
-    "@types/express": "^4.17.11",
-    "@types/mongoose": "5.10.x",
-    "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
     "aws-serverless-express": "^3.4.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
@@ -32,12 +27,19 @@
     "uuid-random": "^1.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/crypto-js": "^4.0.1",
+    "@types/express": "^4.17.11",
+    "@types/mongoose": "5.10.x",
+    "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.2",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
-    "serverless": "^2.29.0"
+    "serverless": "^2.31.0"
   }
 }
