--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "mongoose": "5.10.18",
+    "js-interpreter": "^2.3.0",
+    "mongoose": "^5.12.3",
     "semver": "^7.3.4",
     "typegoose": "^5.9.1",
     "typescript": "^4.1.3",
