--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^7.6.0",
     "amplify": "0.0.11",
+    "aws-sdk": "^2.897.0",
     "aws-serverless-express": "^3.4.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
